CU-1vrn4za[ready-to-test]: Fixed Exit bug

--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,26 @@ pip-log.txt
 log*
 *.ttf
 .checkstyle
+/.gradle/
+/.idea/
+/app/
+/bin/
+/build/
+/gradle/
+/out/
+/Tests/
+/Tests/entity/
+/Tests/screen/
+/untitled/
+/.gitattributes
+/.gitignore
+/gradlew
+/gradlew.bat
+/Invaders.iml
+/Invaders-TEAM11.iml
+/log
+/README.md
+/scores
+/settings.gradle
+/.idea/
+/.idea/
